[package]
name = "scrap"
version = "1.0.0"
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2"
hex = "0.4"
maud = "0.20"
postgres = { version = "0.16.0-rc.2", features = [ "with-chrono-0_4" ] }
pulldown-cmark = { version = "0.5", default-features = false }
r2d2_postgres = "0.15.0-rc.1"
serde = { version = "1", features = [ "derive" ] }
tiny-keccak = { version = "2", features = ["shake"] }
toml = "0.5"
warp = "0.1.15"
